k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bezo-deployment
  namespace: bezo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: bezo
          image: bezo:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7200
