k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bezo-postgres
  namespace: bezo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bezo-postgres
  template:
    metadata:
      labels:
        app: bezo-postgres
    spec:
      containers:
        - name: bezo-postgres
          image: postgres:12-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/bezopostgresql/data
              name: bezo-postgresdb
      volumes:
        - name: bezo-postgresdb
          persistentVolumeClaim:
            claimName: bezo-postgres-pv-claim
