k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  namespace: bezo-dev
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 7200
      targetPort: 7200
